# StudentRentalSystem-Python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  utils.py
src/facebook_rental_crawler/: config.py  crawler.py  crawler_config.py  database.py  extractor.py  main.py  prompts.py  utils.py
src/frontend/: app.py  config.py  database.py  embedding_database.py  llm_service.py  requirements.txt  user_service.py  users_database.py
src/frontend/static/: main.js
src/frontend/templates/: collection.html  history.html  index.html  login.html
src/llm_data_parser/: client.py  config.py  llm_config.py  main.py  registry.py  rules.py
src/query_generator/: app.py  fixer.py  main.py  prompts.py  query_config.py  query_generator.py  settings.py  utils.py
src/query_generator/prompts/: mongo_query_prompt.txt  query_prompt.txt
src/rag_service/: client.py  llm_config.py  main.py  rag.py  registry.py
